# ai-research-assistant

./: .env.example  .gitignore  Dockerfile  README.md  api.py  config.py  display.py  docker-compose.yml  helpers.py  main.py  pyproject.toml  run.py  schemas.py  test_mcp.py
.github/workflows/: ci.yml
agent/: agent.py  decorators.py  graph.py  llm_output_parser.py  prompts.py
agent/tools/: definitions.py  handlers.py
docs/: REVIEW.md  mcp_protocol_notes.md  testcontainers_migration_plan.md
mcp_server/: __main__.py  protocol.py  server.py  transport.py
rag/: ingestion.py  retrieval.py
raw/: s01e01-programowanie-interakcji-z-modelem-jezykowym-1773053098.md  s01e02-techniki-laczenia-modelu-z-narzedziami-1773132164.md  s01e03-projektowanie-api-dla-efektywnej-pracy-z-modelem-1773213233.md  s01e04-wsparcie-multimodalnosci-oraz-zalacznikow-1773579658.md  s01e05-zarzadzanie-jawnymi-oraz-niejawnymi-limitami-modeli-1773377197.md
tests/: conftest.py  test_helpers.py  test_integration.py  test_llm_output_parser.py  test_mcp_protocol.py  test_retrieval.py  test_schemas.py
